--- a/config/config.dev.docker.yaml
+++ b/config/config.dev.docker.yaml
@@ -3,7 +3,7 @@ app:
 auth:
   oidc_timeout: 30s
   jwt:
-    secret_key: "your-secret-key-here"
+    secret_key: "01234567890123456789012345678901"
     token_duration: 24h
     issuer: "family-service"
 database:
