--- a/interface/adapters/graphql/gqlgen.yml
+++ b/interface/adapters/graphql/gqlgen.yml
@@ -17,7 +17,8 @@ resolver:
   layout: follow-schema
   dir: interface/adapters/graphql/resolver
   package: resolver
-  filename_template: "{name}.resolvers.go"
+
+  filename_template: "{name}_resolvers.go"
 
 # Optional: turn on use ` + "`" + `gqlgen:"fieldName"` + "`" + ` tags in your models
 # struct_tag: json
